--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -23,21 +23,33 @@ map:
 ports:
   "8080/tcp": 8080
 options:
-# language: en
   timezone: "Europe/Berlin"
   log_level: "info"
   https_only: false
+  tril_oauth_base_url: ""
+  tril_oauth_client_id: ""
+  tril_oauth_client_secret: ""
+  tril_oauth_issuer_base_url: ""
+  tril_oauth_issuer_name: ""
 schema:
-#  language: |
-#    list(ar|br|ca|cs|de|en|eo|es|fa|fr|hi|it|ja|ko|kz|nl|pl|pt|ru|sv|tl|tr|uk|uz|vi|zh)
   timezone: |
     list(Europe/Berlin|America/New_York|UTC|Asia/Berlin|Europe/London|Asia/Tokyo|Australia/Sydney)
   log_level: "list(trace|debug|info|notice|warning|error|fatal)"
   https_only: "bool"
+  tril_oauth_base_url: "str?"
+  tril_oauth_client_id: "str?"
+  tril_oauth_client_secret: "str?"
+  tril_oauth_issuer_base_url: "str?"
+  tril_oauth_issuer_name: "str?"
+  
 environment:
   TRILIUM_DATA_DIR: "/home/node/trilium-data"
   TZ: "{{ options.timezone }}"
-  NODE_ENV: "production" 
+  NODE_ENV: "production"
   HOST: "0.0.0.0"
   TRILIUM_LOG_LEVEL: "{{ options.log_level }}"
-#  TRILIUM_LANGUAGE: "{{ options.language }}"
+  TRILIUM_OAUTH_BASE_URL: "{{ options.tril_oauth_base_url }}"
+  TRILIUM_OAUTH_CLIENT_ID: "{{ options.tril_oauth_client_id }}"
+  TRILIUM_OAUTH_CLIENT_SECRET: "{{ options.tril_oauth_client_secret }}"
+  TRILIUM_OAUTH_ISSUER_BASE_URL: "{{ options.tril_oauth_issuer_base_url }}"
+  TRILIUM_OAUTH_ISSUER_NAME: "{{ options.tril_oauth_issuer_name }}"
