--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -10,7 +10,12 @@
   "description": "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases.",
   "environment": {
     "TRILIUM_DATA_DIR": "/config",
-    "NO_AUTHENTICATION": "true"
+    "NO_AUTHENTICATION": "true",
+    "TRILIUM_OAUTH_BASE_URL": "",
+    "TRILIUM_OAUTH_CLIENT_ID": "",
+    "TRILIUM_OAUTH_CLIENT_SECRET": "",
+    "TRILIUM_OAUTH_ISSUER_BASE_URL": "",
+    "TRILIUM_OAUTH_ISSUER_NAME": ""
   },
   "name": "Trilium Next - JB",
   "map": [
@@ -23,7 +28,13 @@
   "ports_description": {
     "8080/tcp": "Web interface"
   },
-  "schema": {},
+  "schema": {
+    "TRILIUM_OAUTH_BASE_URL": "str?",
+    "TRILIUM_OAUTH_CLIENT_ID": "str?",
+    "TRILIUM_OAUTH_CLIENT_SECRET": "str?",
+    "TRILIUM_OAUTH_ISSUER_BASE_URL": "str?",
+    "TRILIUM_OAUTH_ISSUER_NAME": "str?"
+  },
   "slug": "triliumnext",
   "startup": "services",
   "upstream": "v0.95.0",
