Add daily cron trigger

--- a/trillium/.github/workflows/docker-build.yml
+++ b/trillium/.github/workflows/docker-build.yml
@@ -2,7 +2,11 @@ name: Build and Push TriliumNext Rootless Add-on
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+  workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   build:
