--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,12 @@
 name: TrilliumNext Update Dockerfile and Entrypoint
 
 on:
+  push:
+    branches:
+      - main
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 * * *'
 
 jobs:
   update-files:
