--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
       - name: Check for changes and move files
         id: move_and_check
         run: |
-          mv Dockerfile homeassistant-addons/trillium/Dockerfile.new
-          mv rootless-entrypoint.sh homeassistant-addons/trillium/rootless-entrypoint.sh.new
+          mv Dockerfile /trillium/Dockerfile.new
+          mv rootless-entrypoint.sh /trillium/rootless-entrypoint.sh.new
 
           CHANGED=0
 
