--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -17,7 +17,7 @@
     "TRILIUM_OAUTH_ISSUER_BASE_URL": "",
     "TRILIUM_OAUTH_ISSUER_NAME": ""
   },
-  "name": "Trilium Next - JB",
+  "name": "Trilium Next - Test",
   "map": [
     "addon_config:rw"
   ],
