--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -9,7 +9,7 @@
   "boot": "auto",
   "description": "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases.",
   "environment": {
-    "TRILIUM_DATA_DIR": "/config",
+    "TRILIUM_DATA_DIR": "/data",
     "NO_AUTHENTICATION": "true",
     "TRILIUM_OAUTH_BASE_URL": "",
     "TRILIUM_OAUTH_CLIENT_ID": "",
