--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,12 @@
 name: TrilliumNext Update Dockerfile, Entrypoint, and package.json
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-  schedule:
-    - cron: '0 0 * * *'
+#on:
+#  push:
+#    branches:
+#      - main
+#  workflow_dispatch:
+#  schedule:
+#    - cron: '0 0 * * *'
 
 jobs:
   update-files:
