--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -1,7 +1,7 @@
 {
   "arch": [
     "amd64",
-    "aarch64",
+    "aarch64", 
     "armhf",
     "armv7",
     "i386"
@@ -9,10 +9,12 @@
   "boot": "auto",
   "description": "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases.",
   "environment": {
-    "TRILIUM_DATA_DIR": "/data",
-    "NO_AUTHENTICATION": "true",
+    "TRILIUM_DATA_DIR": "/data/trilium-data",
     "USER_UID": "1000",
-    "USER_GID": "1000",
+    "USER_GID": "1000", 
+    "TMPDIR": "/data/tmp",
+    "TEMP": "/data/tmp",
+    "NO_AUTHENTICATION": "true",
     "TRILIUM_OAUTH_BASE_URL": "",
     "TRILIUM_OAUTH_CLIENT_ID": "",
     "TRILIUM_OAUTH_CLIENT_SECRET": "",
@@ -20,18 +22,13 @@
     "TRILIUM_OAUTH_ISSUER_NAME": ""
   },
   "name": "Trilium Next - Test",
-"map": [
-  {
-    "type": "data",
-    "read_only": false,
-    "path": "/home/node/trilium-data"
-  },
-  {
-    "type": "config",
-    "read_only": false,
-    "path": "/config"
-  }
-]
+  "map": [
+    {
+      "type": "data",
+      "read_only": false,
+      "path": "/data"
+    }
+  ],
   "options": {},
   "expose": {
     "8080/tcp": {}
@@ -46,13 +43,4 @@
     "TRILIUM_OAUTH_ISSUER_BASE_URL": "str?",
     "TRILIUM_OAUTH_ISSUER_NAME": "str?"
   },
-  "slug": "triliumnext",
-  "startup": "services",
-  "upstream": "v0.95.0",
-  "url": "https://github.com/jeakob/homeassistant-addons",
-  "version": "v0.95.0",
-  "ingress": true,
-  "ingress_port": 8080,
-  #"image": "triliumnext/notes",
-  "webui": "[PROTO:ssl]://[HOST]:[PORT:8080]"
-}
+  "slug": "triliumnex
