--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -1,7 +1,7 @@
 {
   "arch": [
     "amd64",
-    "aarch64", 
+    "aarch64",
     "armhf",
     "armv7",
     "i386"
@@ -9,9 +9,9 @@
   "boot": "auto",
   "description": "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases.",
   "environment": {
-    "TRILIUM_DATA_DIR": "/data/trilium-data",
+    "TRILIUM_DATA_DIR": "/data",
     "USER_UID": "1000",
-    "USER_GID": "1000", 
+    "USER_GID": "1000",
     "TMPDIR": "/data/tmp",
     "TEMP": "/data/tmp",
     "NO_AUTHENTICATION": "true",
@@ -23,11 +23,7 @@
   },
   "name": "Trilium Next - Test",
   "map": [
-    {
-      "type": "data",
-      "read_only": false,
-      "path": "/data"
-    }
+    "addon_config:rw"
   ],
   "options": {},
   "expose": {
@@ -43,4 +39,12 @@
     "TRILIUM_OAUTH_ISSUER_BASE_URL": "str?",
     "TRILIUM_OAUTH_ISSUER_NAME": "str?"
   },
-  "slug": "triliumnex
+  "slug": "triliumnext",
+  "startup": "services",
+  "upstream": "v0.95.0",
+  "url": "https://github.com/jeakob/homeassistant-addons",
+  "version": "v0.95.0",
+  "ingress": true,
+  "ingress_port": 8080,
+  "webui": "[PROTO:ssl]://[HOST]:[PORT:8080]"
+}
