--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -1,50 +1,52 @@
-{
-  "arch": [
-    "amd64",
-    "aarch64",
-    "armhf",
-    "armv7",
-    "i386"
-  ],
-  "boot": "auto",
-  "description": "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases.",
-  "environment": {
-    "TRILIUM_DATA_DIR": "/data",
-    "USER_UID": "1000",
-    "USER_GID": "1000",
-    "TMPDIR": "/data/tmp",
-    "TEMP": "/data/tmp",
-    "NO_AUTHENTICATION": "true",
-    "TRILIUM_OAUTH_BASE_URL": "",
-    "TRILIUM_OAUTH_CLIENT_ID": "",
-    "TRILIUM_OAUTH_CLIENT_SECRET": "",
-    "TRILIUM_OAUTH_ISSUER_BASE_URL": "",
-    "TRILIUM_OAUTH_ISSUER_NAME": ""
-  },
-  "name": "Trilium Next - Test",
-  "map": [
-    "addon_config:rw"
-  ],
-  "options": {},
-  "expose": {
-    "8080/tcp": {}
-  },
-  "ports_description": {
-    "8080/tcp": "Web interface"
-  },
-  "schema": {
-    "TRILIUM_OAUTH_BASE_URL": "str?",
-    "TRILIUM_OAUTH_CLIENT_ID": "str?",
-    "TRILIUM_OAUTH_CLIENT_SECRET": "str?",
-    "TRILIUM_OAUTH_ISSUER_BASE_URL": "str?",
-    "TRILIUM_OAUTH_ISSUER_NAME": "str?"
-  },
-  "slug": "triliumnext",
-  "startup": "services",
-  "upstream": "v0.95.0",
-  "url": "https://github.com/jeakob/homeassistant-addons",
-  "version": "v0.95.0",
-  "ingress": true,
-  "ingress_port": 8080,
-  "webui": "[PROTO:ssl]://[HOST]:[PORT:8080]"
-}
+arch:
+  - amd64
+  - aarch64
+  - armhf
+  - armv7
+  - i386
+
+boot: auto
+
+description: "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases."
+
+environment:
+  TRILIUM_DATA_DIR: "/data"
+  USER_UID: "1000"
+  USER_GID: "1000"
+  TMPDIR: "/data/tmp"
+  TEMP: "/data/tmp"
+  NO_AUTHENTICATION: "true"
+  TRILIUM_OAUTH_BASE_URL: ""
+  TRILIUM_OAUTH_CLIENT_ID: ""
+  TRILIUM_OAUTH_CLIENT_SECRET: ""
+  TRILIUM_OAUTH_ISSUER_BASE_URL: ""
+  TRILIUM_OAUTH_ISSUER_NAME: ""
+
+name: "Trilium Next - Test"
+
+map:
+  - "addon_config:rw"
+
+options: {}
+
+ports:
+  8080/tcp: null
+
+ports_description:
+  8080/tcp: "Web interface"
+
+schema:
+  TRILIUM_OAUTH_BASE_URL: "str?"
+  TRILIUM_OAUTH_CLIENT_ID: "str?"
+  TRILIUM_OAUTH_CLIENT_SECRET: "str?"
+  TRILIUM_OAUTH_ISSUER_BASE_URL: "str?"
+  TRILIUM_OAUTH_ISSUER_NAME: "str?"
+
+slug: "triliumnext"
+startup: "services"
+upstream: "v0.95.0"
+url: "https://github.com/jeakob/homeassistant-addons"
+version: "v0.95.0"
+ingress: true
+ingress_port: 8080
+webui: "[PROTO:ssl]://[HOST]:[PORT:8080]"
