--- a/trillium/config.json
+++ b/trillium/config.json
@@ -6,7 +6,7 @@
     "armv7",
     "i386"
   ],
-  "boot": "auto",
+  #"boot": "auto",
   "description": "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases.",
   "environment": {
     "TRILIUM_DATA_DIR": "/data",
