--- a/trillium/config.json
+++ b/trillium/config.json
@@ -6,20 +6,11 @@
     "armv7",
     "i386"
   ],
-  #"boot": "auto",
+  "boot": "auto",
   "description": "TriliumNext Notes is a hierarchical note taking application with focus on building large personal knowledge bases.",
   "environment": {
-    "TRILIUM_DATA_DIR": "/data",
-    "USER_UID": "1000",
-    "USER_GID": "1000",
-    "TMPDIR": "/data/tmp",
-    "TEMP": "/data/tmp",
-    "NO_AUTHENTICATION": "true",
-    "TRILIUM_OAUTH_BASE_URL": "",
-    "TRILIUM_OAUTH_CLIENT_ID": "",
-    "TRILIUM_OAUTH_CLIENT_SECRET": "",
-    "TRILIUM_OAUTH_ISSUER_BASE_URL": "",
-    "TRILIUM_OAUTH_ISSUER_NAME": ""
+    "TRILIUM_DATA_DIR": "/config",
+    "NO_AUTHENTICATION": "true"
   },
   "name": "Trilium Next - Test",
   "map": [
@@ -32,13 +23,7 @@
   "ports_description": {
     "8080/tcp": "Web interface"
   },
-  "schema": {
-    "TRILIUM_OAUTH_BASE_URL": "str?",
-    "TRILIUM_OAUTH_CLIENT_ID": "str?",
-    "TRILIUM_OAUTH_CLIENT_SECRET": "str?",
-    "TRILIUM_OAUTH_ISSUER_BASE_URL": "str?",
-    "TRILIUM_OAUTH_ISSUER_NAME": "str?"
-  },
+  "schema": {},
   "slug": "triliumnext",
   "startup": "services",
   "upstream": "v0.95.0",
@@ -46,5 +31,6 @@
   "version": "v0.95.0",
   "ingress": true,
   "ingress_port": 8080,
+  "image": "triliumnext/notes",
   "webui": "[PROTO:ssl]://[HOST]:[PORT:8080]"
 }
