--- a/trillium/config.json
+++ b/trillium/config.json
@@ -12,7 +12,7 @@
     "TRILIUM_DATA_DIR": "/config",
     "NO_AUTHENTICATION": "true"
   },
-  "name": "Trilium Next - Test",
+  "name": "Trilium",
   "map": [
     "addon_config:rw"
   ],
