--- a/trillium/config.yaml
+++ b/trillium/config.yaml
@@ -36,6 +36,10 @@ schema:
   https_only: "bool"
 environment:
   TRILIUM_DATA_DIR: "/home/node/trilium-data"
+  USER_UID: "1000"
+  USER_GID: "1000"
+  TMPDIR: "/data/tmp"
+  TEMP: "/data/tmp"
   TZ: "{{ options.timezone }}"
   NODE_ENV: "production" 
   HOST: "0.0.0.0"
