--- a/trillium/Dockerfile
+++ b/trillium/Dockerfile
@@ -4,8 +4,8 @@ FROM ${BUILD_FROM}
 # Set shell
 SHELL ["/bin/sh", "-c"]
 
-# Update package index and install su-exec
-RUN apk update && apk add --no-cache su-exec
+# Install gosu instead of su-exec
+RUN apk update && apk add --no-cache gosu
 
 # Install Node.js and npm if not already present in base image
 RUN if ! command -v node > /dev/null 2>&1; then \
