Update and rename docker-build.yml to update-readme.yml

--- a/trillium/.github/workflows/update-readme.yml
+++ b/trillium/.github/workflows/update-readme.yml
@@ -27,3 +27,26 @@ jobs:
           # Ensure TRILIUM_DATA_DIR is set to /data
           grep -q 'ENV TRILIUM_DATA_DIR' Dockerfile || echo 'ENV TRILIUM_DATA_DIR=/data' >> Dockerfile
 
+      - name: Extract version from build.yaml
+        id: extract_version
+        run: |
+          VERSION=$(grep 'version:' build.yaml | awk '{print $2}')
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "Version extracted: $VERSION"
+
+      - name: Update README.md with version
+        run: |
+          echo "Updating README.md with version: $VERSION"
+          sed -i "s|version: .*|version: $VERSION|g" README.md
+
+      - name: List files after updates
+        run: ls -la
+
+      - name: Commit and push changes to README.md
+        if: ${{ env.VERSION }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add README.md
+          git commit -m "Update README.md with version $VERSION"
+          git push
