--- a/trillium/build.yaml
+++ b/trillium/build.yaml
@@ -1,4 +1,4 @@
-# build.yaml test
+# build.yaml
 build_from:
   amd64: docker.io/triliumnext/notes:v0.92.3-beta
   aarch64: docker.io/triliumnext/notes:v0.95.0
