--- a/.github/workflows/triillium-readme-version-update.yml
+++ b/.github/workflows/triillium-readme-version-update.yml
@@ -3,7 +3,7 @@ name: Update README with Version
 on:
   workflow_dispatch:
   schedule:
-    - cron: '/5 * * * *' # every day at 6:00 UTC
+    - cron: '1 * * * *' # every day at 6:00 UTC
 
 jobs:
   update-readme:
