--- a/.github/workflows/triillium-readme-version-update.yml
+++ b/.github/workflows/triillium-readme-version-update.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Parse version from build.yml
       id: parse_version
       run: |
-        VERSION=$(grep 'version:' homeassistant-addons/trillium/build.yml | awk '{print $2}')
+        VERSION=$(grep 'version:' /trillium/build.yaml | awk '{print $2}')
         echo "VERSION=$VERSION" >> $GITHUB_ENV
         echo "Version extracted: $VERSION"
 
